--- a/index.css
+++ b/index.css
@@ -22,7 +22,8 @@
   color: white;
   width: 100%;
   min-width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 .bottom a {
   color: #ba26ce;
