--- a/index.css
+++ b/index.css
@@ -20,10 +20,11 @@
 .bottom {
   background-color: black;
   color: white;
-  width: 100%;
-  min-width: 100%;
+  padding-top: 20px;
+  padding-bottom: 20px;
   overflow-x: hidden;
   overflow-y: hidden;
+  margin: 0px;
 }
 .bottom a {
   color: #ba26ce;
