--- a/index.css
+++ b/index.css
@@ -145,8 +145,8 @@ h3 {
     font-size: 1.5rem;
   }
   .tagline {
-    padding-top: 10px;
-    font-size: 12px;
+    padding-top: 20px;
+    font-size: 10px !important;
   }
   body {
     background-image: none;
@@ -158,6 +158,9 @@ h3 {
   }
   .main {
     margin-left: 5%;
+  }
+  .logo {
+    width: 90%;
   }
 }
 
